Fixed center positioning and z-index

--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Tangerine:wght@700&display=swap"');
 
-$tangerine: 'Tangerine', cursive;
-$open-sans: 'Open Sans', sans-serif;
+$cursive-font-family: 'Tangerine', cursive;
+$text-font-family: 'Open Sans', sans-serif;
 $orange: rgb(255, 157, 0);
-$top-val: 66px;
+$top-value: 66px;
 
 body {
-  font-family: $open-sans;
+  font-family: $text-font-family;
 }
 
 main {
@@ -15,7 +16,13 @@ main {
 }
 
 #index {
+  padding-top: $top-value;
   height: 100vh;
+  overflow-y: hidden;
+}
+
+#about {
+  font-weight: 300;
 }
 
 .nav-link-style {
@@ -73,24 +80,26 @@ main {
 }
 
 .index-text {
+  position: relative;
   font-size: 4.5rem;
-  font-family: $tangerine;
+  font-family: $cursive-font-family;
   text-shadow: 2px 2px 3px black;
-  z-index: 30;
+  // z-index: 30;
+}
+
+.logo-index-custom {
+  position: relative;
+  // z-index: 100;
 }
 
 .overlay-index {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.65);
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
-}
-
-.logo-index-custom {
-  z-index: 30;
+  // z-index: 0;
 }
 
 // .custom-background {
@@ -111,12 +120,12 @@ main {
 }
 
 // .custom-index {
-//   min-height: calc(100vh - #{$top-val});
+//   min-height: calc(100vh - #{$top-value});
 // }
 
 .about-name {
   font: {
-    family: $tangerine;
+    family: $cursive-font-family;
     size: 2.5rem;
   }
 }
@@ -234,7 +243,7 @@ form {
   // font-size: 1rem;
   // font-weight: 700;
   // margin: auto;
-  font-family: $tangerine;
+  font-family: $cursive-font-family;
   font-size: 4rem;
   color: $orange;
   text-shadow: 0 0 1px rgba(0, 0, 0, 0.664);
